[project]
name = "raw"
version = "0.3.0"
description = "A CLI tool for tracking study and work time"
authors = [
    {name = "dvodnenko",email = "thekovalskii@gmail.com"}
]
packages = [
    { include = "raw", from = "src" }
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "click (>=8.2.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
raw = "raw:raw"
